Add necessary migration, seeder, factory, model and update the swagger doc
